src/objects/Applicant__c.object
<CustomObject>
    <description>This object will hold all information related to an Applicant, associated with a Application, Contact and Account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Field associates Applicant record to the Account relevant to the Applicant, e.g., if Applicant is applying for a home loan, this field would associate it with the Home Account record.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__r.Birthdate)),
  IF(DATE(2000, MONTH(Contact__r.Birthdate), DAY(Contact__r.Birthdate)) &lt;= DATE(2000, MONTH(TODAY()), DAY(TODAY())),
     YEAR(Today()) - YEAR(Contact__r.Birthdate),
     YEAR(Today()) - YEAR(Contact__r.Birthdate) - 1),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowable_MAFD__c</fullName>
        <formula>IF(((Gross_Monthly_Income__c *12)&gt;=25000), Gross_Monthly_Income__c *0.40,Gross_Monthly_Income__c *0.36)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowable MAFD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Processing_Variables__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Processing Variables</label>
        <referenceTo>App_Processing_Variables__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Relation_Type__c</fullName>
        <label>Applicant Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application related to the applicant record</description>
        <inlineHelpText>Application related to this applicant</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Character_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does applicant have any character issues present or pending?</description>
        <label>Character Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Field associates the Applicant record to the parent Contact record. A Contact may have multiple Applicant records.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <label>Employer Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_Calculation__c</fullName>
        <formula>New_Debt_Load__c /  Gross_Monthly_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds Standard Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <formula>IF( ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Weekly&quot;) , ( Stated_Gross_Income__c * 52),
 (IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Bi-Weekly&quot;) ,(Stated_Gross_Income__c * 26),
    ( IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Monthly&quot;), (Stated_Gross_Income__c * 12) ,
        (IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Yearly&quot;), Stated_Gross_Income__c,
          (IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Semi-monthly&quot;) ,(Stated_Gross_Income__c * 24),
             (IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Hourly&quot;) ,(Stated_Gross_Income__c * 2080),
               (IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Quarterly&quot;) ,(Stated_Gross_Income__c * 4),
                (IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Semi-annual&quot;) ,(Stated_Gross_Income__c * 2),0 )))))))))))))))
+
IF( ISPICKVAL(  Other_Income_Source_Frequency__c  , &quot;Weekly&quot;) , (  Other_Income_Amount__c  * 52),
 (IF(ISPICKVAL(  Other_Income_Source_Frequency__c , &quot;Bi-Weekly&quot;) ,( Other_Income_Amount__c  * 26),
    ( IF(ISPICKVAL(  Other_Income_Source_Frequency__c  , &quot;Monthly&quot;), ( Other_Income_Amount__c  * 12) ,
        (IF(ISPICKVAL(  Other_Income_Source_Frequency__c  , &quot;Yearly&quot;),  Other_Income_Amount__c ,
          (IF(ISPICKVAL(  Other_Income_Source_Frequency__c  , &quot;Semi-monthly&quot;) ,( Other_Income_Amount__c  * 24),
             (IF(ISPICKVAL(  Other_Income_Source_Frequency__c  , &quot;Hourly&quot;) ,( Other_Income_Amount__c  * 2080),
               (IF(ISPICKVAL(  Other_Income_Source_Frequency__c  , &quot;Quarterly&quot;) ,( Other_Income_Amount__c  * 4),
                (IF(ISPICKVAL(  Other_Income_Source_Frequency__c  , &quot;Semi-annual&quot;) ,( Other_Income_Amount__c  * 2),0 )))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income2__c</fullName>
        <formula>Gross_Annual_Income__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income__c</fullName>
        <formula>IF( ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Weekly&quot;) , ( Stated_Gross_Income__c  *  4),  (IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Bi-Weekly&quot;)  ,(Stated_Gross_Income__c  *  2),( IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Monthly&quot;),  Stated_Gross_Income__c ,  IF(ISPICKVAL( Stated_Gross_Income_Frequency__c , &quot;Yearly&quot;), ( Stated_Gross_Income__c  / 12), 0) ) ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Monthly Income_Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAFD_P__c</fullName>
        <formula>Monthly_Fixed_Debt__c / Gross_Monthly_Income2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAFD %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MAFD__c</fullName>
        <description>Monthly Allowed Fixed Debt</description>
        <inlineHelpText>Monthly Allowed Fixed Debt</inlineHelpText>
        <label>MAFD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manual_CBR_Pull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual CBR Pull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Fixed_Debt__c</fullName>
        <label>Monthly Fixed Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Employed__c</fullName>
        <label>Months Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Debt_Load__c</fullName>
        <formula>Application__r.Estimated_Monthly_Payment__c +  Monthly_Fixed_Debt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Debt Load</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Income_Amount__c</fullName>
        <label>Other Income Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Income_Source_Frequency__c</fullName>
        <label>Other Income Source Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Income_Source__c</fullName>
        <label>Other Income Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Wage_Earner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Wage Earner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBA_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBA Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Cash_Available__c</fullName>
        <formula>IF( (Gross_Monthly_Income__c *12)&gt;=25000, ((Gross_Monthly_Income__c *0.40)- Monthly_Fixed_Debt__c ),((Gross_Monthly_Income__c *0.36)- Monthly_Fixed_Debt__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stated_Gross_Income_Frequency__c</fullName>
        <label>Stated Gross Income Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stated_Gross_Income__c</fullName>
        <label>Stated Gross Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>Tax Identification Number</description>
        <inlineHelpText>Tax Identification Number</inlineHelpText>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_SBA_Loans__c</fullName>
        <description>Field displays the total number of SBA Loans associated to this Applicant, if any.</description>
        <inlineHelpText>Field displays the total number of SBA Loans associated to this Applicant, if any.</inlineHelpText>
        <label>Total SBA Loans</label>
        <summaryForeignKey>SBA_Loan_History__c.Applicant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>US_Citizen_Details__c</fullName>
        <label>US Citizen Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>U_S_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is applicant an United States citizen?</inlineHelpText>
        <label>U.S. Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_Employed__c</fullName>
        <label>Years Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_only_one_primary_Applicant</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Application__r.Loan_Type__c ,&quot;Home&quot;) &amp;&amp;  Primary_Applicant__c=TRUE &amp;&amp; Application__r.Num_of_Primary_Applicants__c = 1</errorConditionFormula>
        <errorMessage>There should be only one Primary Applicant per application. Please fix the primary Applicant checkbox on the Applicant</errorMessage>
    </validationRules>
</CustomObject>